--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "openai": "^5.10.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "dev": "concurrently \"cd backend && uvicorn main:app --reload\" \"cd frontend && npm run dev\""
   },
   "keywords": [],
   "author": "",
