--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "workspace",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "dependencies": {
-    "openai": "^5.10.2"
-  },
+  "name": "frontend",
+  "version": "0.0.1",
   "scripts": {
-  "dev": "concurrently \"cd backend && uvicorn main:app --reload\" \"cd frontend && npm run dev\""
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "vite": "^4.3.9"
+  }
 }
